{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 546,
  "lineage": "dbe885c0-c748-8ca0-533b-3fc0189ecba4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "alxmedium_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-095be84b67026dba1",
            "owner_id": "262933287493",
            "tags": {
              "Name": "alxmedium_internet_gateway_route_table_subnet_1"
            },
            "vpc_id": "vpc-04852116777a70d84"
          },
          "dependencies": [
            "aws_vpc.alxmedium_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alxmedium_route_table_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01a19ef1efe4ba9f2",
            "owner_id": "262933287493",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095be84b67026dba1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alxmedium_route_table_subnet_1"
            },
            "vpc_id": "vpc-04852116777a70d84"
          },
          "dependencies": [
            "aws_internet_gateway.alxmedium_internet_gateway",
            "aws_vpc.alxmedium_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alxmedium_route_table_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-045faa4bd1b7dc234",
            "owner_id": "262933287493",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095be84b67026dba1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alxmedium_route_table_subnet_2"
            },
            "vpc_id": "vpc-04852116777a70d84"
          },
          "dependencies": [
            "aws_internet_gateway.alxmedium_internet_gateway",
            "aws_vpc.alxmedium_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alxmedium_subnet_1_route_table_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5d21a35e85ab5c0",
            "route_table_id": "rtb-01a19ef1efe4ba9f2",
            "subnet_id": "subnet-054d846e856dc0792"
          },
          "dependencies": [
            "aws_internet_gateway.alxmedium_internet_gateway",
            "aws_route_table.alxmedium_route_table_subnet_1",
            "aws_subnet.alxmedium_subnet_1",
            "aws_vpc.alxmedium_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alxmedium_subnet_2_route_table_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089059b48791faff0",
            "route_table_id": "rtb-045faa4bd1b7dc234",
            "subnet_id": "subnet-086764738987247f5"
          },
          "dependencies": [
            "aws_internet_gateway.alxmedium_internet_gateway",
            "aws_route_table.alxmedium_route_table_subnet_2",
            "aws_subnet.alxmedium_subnet_2",
            "aws_vpc.alxmedium_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alxmedium_eks_cluster_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262933287493:security-group/sg-0b3b3b113e97466a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3b3b113e97466a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "187.190.21.206/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alxmedium_eks_cluster_security_group",
            "name_prefix": null,
            "owner_id": "262933287493",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alxmedium_eks_cluster_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04852116777a70d84"
          },
          "dependencies": [
            "aws_vpc.alxmedium_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alxmedium_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262933287493:subnet/subnet-054d846e856dc0792",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-054d846e856dc0792",
            "map_public_ip_on_launch": true,
            "owner_id": "262933287493",
            "tags": {
              "Name": "alxmedium_subnet_1",
              "kubernetes.io/cluster/alxmedium_eks_cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04852116777a70d84"
          },
          "dependencies": [
            "aws_vpc.alxmedium_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alxmedium_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262933287493:subnet/subnet-086764738987247f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-086764738987247f5",
            "map_public_ip_on_launch": true,
            "owner_id": "262933287493",
            "tags": {
              "Name": "alxmedium_subnet_2",
              "kubernetes.io/cluster/alxmedium_eks_cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04852116777a70d84"
          },
          "dependencies": [
            "aws_vpc.alxmedium_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alxmedium_subnet_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262933287493:subnet/subnet-054353db3d948e917",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-054353db3d948e917",
            "map_public_ip_on_launch": false,
            "owner_id": "262933287493",
            "tags": {
              "Name": "alxmedium_subnet_3",
              "kubernetes.io/cluster/alxmedium_eks_cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04852116777a70d84"
          },
          "dependencies": [
            "aws_vpc.alxmedium_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alxmedium_subnet_4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262933287493:subnet/subnet-0df9e913f89a4271a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0df9e913f89a4271a",
            "map_public_ip_on_launch": false,
            "owner_id": "262933287493",
            "tags": {
              "Name": "alxmedium_subnet_4",
              "kubernetes.io/cluster/alxmedium_eks_cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04852116777a70d84"
          },
          "dependencies": [
            "aws_vpc.alxmedium_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "alxmedium_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262933287493:vpc/vpc-04852116777a70d84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04bdfe229b143faa6",
            "default_route_table_id": "rtb-07d7df578103674be",
            "default_security_group_id": "sg-0e13713f115f2a315",
            "dhcp_options_id": "dopt-4c0bc436",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04852116777a70d84",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07d7df578103674be",
            "owner_id": "262933287493",
            "tags": {
              "Name": "alxmedium_vpc",
              "kubernetes.io/cluster/alxmedium_eks_cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}